--- a/react-app/src/components/profile/profile.css
+++ b/react-app/src/components/profile/profile.css
@@ -56,7 +56,6 @@
 .parties-info {
     position: relative;
     background-color: rgba(255, 255, 240, .3);
-    width: fit-content;
     backdrop-filter: blur(6px);
     border-radius: 4em;
 }
